--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -78,7 +78,6 @@
 
         &__menu {
             display: flex;
-            height: 100vh;
             position: absolute;
             right: 0;
             top: 0;
@@ -100,7 +99,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 10px;
-                margin: 20px;
+                margin: 30px 20px;
 
                 &-item {
                     width: 30px;
@@ -108,7 +107,8 @@
                     background-color: $text_color;
 
                     &.clicked:nth-child(1) {
-                        transform: rotate(45deg) translate(9px, 9px);
+                        margin-top: 10px;
+                        transform: rotate(45deg);
                         transition: ease-out 0.5s;
                     }
 
@@ -118,7 +118,8 @@
                     }
 
                     &.clicked:nth-child(3) {
-                        transform: rotate(135deg) translate(-8px, 8px);
+                        margin-top: -24px;
+                        transform: rotate(-45deg);
                         transition: ease-out 0.5s;
                     }
 
@@ -136,6 +137,7 @@
         }
 
         .visible {
+            height: 100vh;
             display: flex;
         }
     }
