--- a/src/style/News.scss
+++ b/src/style/News.scss
@@ -7,8 +7,8 @@
     padding: 40px 40px 0 40px;
 
     &__cards {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        display: flex;
+        justify-content: space-between;
         gap: 40px;
     }
 
@@ -31,7 +31,7 @@
         padding: 20px 20px 0 20px;
 
         &__cards {
-            grid-template-columns: 1fr;
+            flex-direction: column;
         }
 
     }
