--- a/src/components/Artists/Artists.scss
+++ b/src/components/Artists/Artists.scss
@@ -1,37 +1,39 @@
-@import './variables';
+@import '../../style/variables.scss';
 
 .artists {
-    margin-top: 50px;
-    margin-bottom: 40px;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 40px 40px 0 40px;
+    &__wrapper {
+        background-color: rgba(0, 0, 0, 0.7);
+        padding: 40px 40px 0 40px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
 
     &__cards {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        margin-top: 20px;
+
         button {
-            margin: 20px 20px 40px;
+            margin: 20px;
             color: $text_color;
             padding: 8px 40px;
             border: 1px solid $text_color;
             background-color: transparent;
             cursor: pointer;
+
             &:hover {
-            background-color: $text_color;
-            color: $bg_color;
+                background-color: $text_color;
+                color: $bg_color;
             }
         }
-
     }
 
     &__card {
         width: 50%;
+
         img {
-            position: relative;
             z-index: 1;
-            height: 340px;
+            height: 320px;
             object-fit: cover;
             width: 100%;
         }
@@ -44,7 +46,6 @@
         }
 
         div {
-            position: relative;
             margin-top: -48px;
             z-index: 10;
             padding: 10px;
@@ -59,20 +60,23 @@
                 background-color: rgba(0, 0, 0, 0.7);
             }
         }
-    }
 
+    }
 }
+
 @media (max-width: 768px) {
     .artists {
+        &__wrapper {
             padding: 20px 20px 0 20px;
-    
-            &__cards {
-                flex-direction: column;
-            }
-    
-            &__card {
-                width: 100%;
-            }
-    
         }
+
+        &__cards {
+            flex-direction: column;
+        }
+
+        &__card {
+            width: 100%;
+        }
+
+    }
 }
