--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -1,18 +1,16 @@
-@import './variables';
+@import '../../style/variables.scss';
 
 .contacts {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    background-image: url(../../public/contacts.jpeg);
-    background-repeat: no-repeat;
-    padding: 40px 40px 0 40px;
-    background-color: rgba(0, 0, 0, 0.7);
-
     &__wrapper {
+        background-image: url(./contacts.jpeg);
+        background-repeat: no-repeat;
+        background-color: rgba(0, 0, 0, 0.7);
+        margin-top: 50px;
+        margin-bottom: 50px;
+        padding: 40px 40px 0 40px;
         display: grid;
         grid-template-columns: 3fr 2fr;
         gap: 60px;
-
     }
 
     &__content {
@@ -21,6 +19,7 @@
             color: $accent_color;
             margin-bottom: 30px;
         }
+
         p {
             max-width: 400px;
         }
@@ -36,6 +35,7 @@
         max-width: 400px;
         border-left: 4px solid $brand_color;
     }
+
     &__form {
         background-color: $bg_color;
         display: flex;
@@ -43,62 +43,62 @@
         padding: 40px;
         gap: 20px;
         margin-top: 80px;
-    
+
         label {
             display: flex;
             flex-direction: column;
-    
+
             input {
                 height: 28px;
             }
         }
-    
+
         h3 {
             font-size: 25px;
             margin-bottom: 10px;
         }
-    
+
         .submit {
             background-color: $brand_color;
             padding: 5px 20px;
             margin-top: 20px;
             font-weight: 700;
             font-size: 16px;
-    
+
             &:hover {
                 background-color: $accent_color;
             }
         }
     }
 }
+
 @media (max-width: 768px) {
     .contacts {
+        &__wrapper {
             padding: 20px 20px 0 20px;
-    
-            &__wrapper {
-                display: grid;
-                grid-template-columns: 1fr;
-                gap: 20px;
-            }
-    
-            &__content {
-                h4 {
-                    font-size: 28px;
-                    margin-bottom: 20px;
-                }
-            }
-    
-            &__text {
-                gap: 10px;
-                margin-top: 20px;
-                padding: 10px;
-            }
-    
-            &__form {
-                padding: 20px;
-                gap: 10px;
-                margin-top: 20px;
-    
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+        }
+
+        &__content {
+            h4 {
+                font-size: 28px;
+                margin-bottom: 20px;
             }
         }
+
+        &__text {
+            gap: 10px;
+            margin-top: 20px;
+            padding: 10px;
+        }
+
+        &__form {
+            padding: 20px;
+            gap: 10px;
+            margin-top: 20px;
+
+        }
+    }
 }
