--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,12 +1,12 @@
-@import './variables';
+@import '../../style/variables.scss';
 
 .home {
+    justify-content: flex-start;
     .container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        width: 100%;
         color: $accent_color;
-        height: calc(100vh - 140px);
 
         h1 {
             font-size: 90px;
@@ -25,8 +25,6 @@
 @media (max-width: 768px) {
     .home {
         .container {
-            height: calc(100vh - 180px);
-
             h1 {
                 font-size: 54px;
                 line-height: 60px;
